@@ -7,6 +7,7 @@ Changes in Release 1.1.3
 [SC-75] - SVNResource does not work at all
 [SC-77] - StoredId doesn't carry over old (computed Id) values correctly
 [SC-78] - AACLI fail testing storedId
+[SC-79] - Configuration Reloading only works when RetryAttempts are configured
 
 Changes in Release 1.1.2
 =============================================
